--- a/main.css
+++ b/main.css
@@ -1,6 +1,16 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+@theme {
+  --color-nav: #121c2e;
+  --color-footer: #27496d;
+  --color-dimtext: #90a1b9;
+  --color-red: #ff0035;
+  --color-teal: #16e0d4;
+  --font-oswald: "Oswald", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
+}
+
 body {
-  font-family: "Outfit", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
