Navbar update, eslint integration, prettier tailwind plugin, layouts

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
   --color-footer: #27496d;
   --color-dimtext: #90a1b9;
   --color-red: #ff0035;
+  --color-teal: #16e0d4;
   --font-oswald: "Oswald", sans-serif;
   --font-montserrat: "Montserrat", sans-serif;
 }
