cambios visuales modal

--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@
   --color-dimtext: #90a1b9;
   --color-red: #ff0035;
   --color-teal: #16e0d4;
+  --color-modalbg: #9cb4cc;
+
   --font-oswald: "Oswald", sans-serif;
   --font-montserrat: "Montserrat", sans-serif;
 }
